chore: finalizando home
