# src/presentation/pages/Home/components/ResumoFinanceiroChart/resumoFinanceiroChart.types.ts
@@ -1,6 +1,6 @@
 import { ReceitaPorMes, DespesaPorMes } from "@/domain/models";
 
 export interface ResumoFinanceiroChartProps {
-  receitas: ReceitaPorMes[];
-  despesas: DespesaPorMes[];
+  receitasMes: ReceitaPorMes[];
+  despesasMes: DespesaPorMes[];
 }
