# src/presentation/pages/Home/components/ResumoMensalTable/resumoMensalTable.types.ts
@@ -1,9 +1,8 @@
 import { ReceitaPorMes, DespesaPorMes } from "@/domain/models";
 
 export interface ResumoMensalTableProps {
-  totalReceitasAno: number;
-  totalDespesasAno: number;
-  receitas: ReceitaPorMes[];
-  despesas: DespesaPorMes[];
-  isLoading: boolean;
+  receitasAno: number;
+  despesasAno: number;
+  receitasMes: ReceitaPorMes[];
+  despesasMes: DespesaPorMes[];
 }
